CRUD frontend completo de productos

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Título >:v</title>
+        <link rel="shortcut icon" href="https://img.icons8.com/pastel-glyph/64/000000/movie-beginning.png" type="image/x-icon">
+        <title></title>
     </head>
     <body>
         <div id="root"></div>
